src/module/indicator/operational/test/rejectionEvidence/vuex/state.js
export default {
  typesRejects: [ 'Técnica', 'Cliente', 'Todos' ],
  selectedRejectionType: 'Técnica',
  maxRejectionPercentage: 15,

  data: [],
  dataTimeline: [],

  loading: false,
  loadingTimeline: false,

  testManufSelected: '',
  systemSelected: ''
}
